--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>notarealperson.xyz</title>
+<title>Not A Real Person</title>
 <meta charset="UTF-8">
 <link rel="SHORTCUT ICON" href="https://ik.imagekit.io/im614a1fu/hanapfp.jpg">
 <style>body{color:#fff;background-color:#000}a{text-decoration:none;color:#ffa531;font-family:courier;font-size:100%}tdtitle{text-decoration:underline;border:0 solid;padding:0;vertical-align:middle;text-align:center}td{padding:5px;text-align:left;vertical-align:top}.image-group{display:flex;justify-content:center;flex-wrap:wrap;gap:1rem;margin:1rem auto;max-width:100%}.image-group img{max-width:100%;height:auto;max-height:300px;max-width:300px;object-fit:contain}</style>
@@ -25,3 +25,4 @@ Dg("https://ik.imagekit.io/im614a1fu/Aoba.gif")
 </script>
 
 </html>
+
