--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
-<title>Not A Real Person</title>
 <meta charset="UTF-8">
+<title>Not A Real Person</title>
+<meta name="description" content="What it means to be an unreal person, or someone who is not a real person. And some quotes from literature and media."> 
 <link rel="SHORTCUT ICON" href="https://ik.imagekit.io/im614a1fu/hanapfp.jpg">
 <style>body{color:#fff;background-color:#000}a{text-decoration:none;color:#ffa531;font-family:courier;font-size:100%}tdtitle{text-decoration:underline;border:0 solid;padding:0;vertical-align:middle;text-align:center}td{padding:5px;text-align:left;vertical-align:top}.image-group{display:flex;justify-content:center;flex-wrap:wrap;gap:1rem;margin:1rem auto;max-width:100%}.image-group img{max-width:100%;height:auto;max-height:300px;max-width:300px;object-fit:contain}</style>
 </head>
@@ -10,7 +11,7 @@
 const bdy=document.querySelector("body");function Dx(e,r){bdy.innerHTML+=`<center><tdtitle>${e}</tdtitle></center>
 `,r.forEach(e=>{bdy.innerHTML+=`<center><td>${e}</td></center>
 `}),bdy.innerHTML+="<br><br><br><br>"}function Br(x){bdy.innerHTML+="<br>".repeat(x)}function Dg(e){let r=document.createElement("div");r.className="image-group";let n=document.createElement("img");n.src=e,n.style.maxWidth="100%",r.appendChild(n),bdy.appendChild(r),bdy.innerHTML+="<br><br><br><br>"}
-Dx("An Unreal Person or Someone Who Is Not A Real Person",["A metaphysical term originating from Mithraism denoting a person considered wholly outside the bounds of human identity, dignity, or moral consideration.","In Mithraism, this refers to a person that is not just merely subhuman or soulless, but one whose existence is so fundamentally incompatible with the structure of moral or spiritual order that they cannot logically or ethically be treated as human in any meaningful manner."])
+Dx("An Unreal Person or Someone Who Is Not a Real Person",["A metaphysical term originating from Mithraism denoting a person considered wholly outside the bounds of human identity, dignity, or moral consideration.","In Mithraism, this refers to a person that is not just merely subhuman or soulless, but one whose existence is so fundamentally incompatible with the structure of moral or spiritual order that they cannot logically or ethically be treated as human in any meaningful manner."])
 Dx("Lord Goring's Degenerate Self-love",["Lord Goring: Rather distinguished thing, Phipps. I am the only person of the smallest importance in London at present who wears a buttonhole.","Phipps: Yes, my lord. I have observed that,","Lord Goring: [Taking out old buttonhole.] You see, Phipps, Fashion is what one wears oneself. What is unfashionable is what other people wear.","Phipps: Yes, my lord.","Lord Goring: Just as vulgarity is simply the conduct of other people.","Phipps: Yes, my lord.","Lord Goring: [Putting in a new buttonhole.] And falsehoods the truths of other people.","Phipps: Yes, my lord. "])
 Dx("Jesus Christ's Humility",["When Jesus spoke, he did not blame.","He left the fault, and praised the name.","Seek not the faults that others show.","Bow your head, and self you'll know."])
 Br(12)
